custom-apps/photoprism/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: photoprism
  namespace: photoprism
spec:
  selector:
    matchLabels:
      app: photoprism
  serviceName: photoprism
  replicas: 1
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      containers:
      - name: photoprism
        image: photoprism/photoprism:latest
        ports:
        - containerPort: 2342
          name: http
        volumeMounts:
        - mountPath: /photoprism/originals
          name: originals
        - mountPath: /photoprism/storage
          name: photoprism
        readinessProbe:
          httpGet:
            path: /api/v1/status
            port: http
      volumes:
        - persistentVolumeClaim:
            claimName: pvc-smb-photoprism-originals
          name: originals
      volumeClaimTemplates:
      - metadata:
          name: photoprism
        spec:
          accessModes: [ "ReadWriteOnce" ]
          storageClassName: "longhorn"
          resources:
            requests:
              storage: 20Gi
